--- a/bin/main/templates/MyPage/MyPageTrash.html
+++ b/bin/main/templates/MyPage/MyPageTrash.html
@@ -71,7 +71,7 @@
 					<div>
 						<form method="POST" id="frm" style="color: white;">
 							<div class="row">
-								<div class="mt-5" th:each="list : ${trash.getList()}"
+								<div class="mt-3 mb-4" th:each="list : ${trash.getList()}"
 									style="background-color: rgb(38, 38, 38); border-radius: 9px;">
 
 									<div class="row">
@@ -210,7 +210,7 @@
 
 
 						<!--  -->
-						<div th:if="${#lists.size(trash.getList())}>10">
+						<div th:if="${#lists.size(trash.getList())}>1">
 							<div class="mt-5" style="color: black;" id="paging">
 								<ul class="pagination justify-content-center">
 									<li class="page-item"
