--- a/src/main/resources/templates/MyPage/MypageTrash.html
+++ b/src/main/resources/templates/MyPage/MypageTrash.html
@@ -62,7 +62,7 @@
 			<nav th:include="/Mypage/nav :: nav" class="col-lg-3  px-5"></nav>
 			<!-- 메인영역 -->
 			<main class="col-lg-9 bg-black " style="padding-top: 100px;">
-				<div class="w-75 mx-auto mt-4">
+				<div class="px-3 mt-4">
 					<div>
 						<h3 class="text-primary">
 							<b>삭제한 리뷰</b>
