--- a/src/main/resources/templates/MyPage/MypageWishlist.html
+++ b/src/main/resources/templates/MyPage/MypageWishlist.html
@@ -79,9 +79,9 @@
 			<nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5 h-100"></nav>
 			<!-- 메인영역 -->
 			<main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
-				<H3 class="text-primary text-center"><b>찜 리스트</b></H3>
+				<H3 class="text-primary"><b>찜 리스트</b></H3>
 				<!-- 검색 영역 -->
-				<div style="width: 300px;" class="mx-auto">
+				<div style="width: 300px;">
 					<input type="text" id="title" name="title" class="w-100 form-control" style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px;">
 					<input type="button" id="btnSearch" value="검색" class="w-100 btn btn-primary" style="border-top-left-radius: 0px; border-top-right-radius: 0px;">
 				</div>
