--- a/bin/main/templates/account/admin/accountManagement.html
+++ b/bin/main/templates/account/admin/accountManagement.html
@@ -8,6 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/style.RecMovie.css">
 <script>
 	let N = "no";
 	let Y = "yes";
@@ -99,21 +100,21 @@
                     <hr class="text-white">
                    <h1>검색결과가 없습니다 재검색 해주세요.</h1>
                </div>
-                   	<ul  th:if="${userList.getList().size()}>0" class="pagination d-flex justify-content-center">
-		 				<li class="page-item" th:classappend="${userList.getPrePage()} == 0 ? 'disabled'">
-							<a class="page-link text-black" th:href="@{/admin/account(query=${query},pageNum=1)}">&laquo;</a>
+                   	<ul  th:if="${userList.getList().size()}>0" class="custom-pagination pagination d-flex justify-content-center">
+		 				<li class="page-item" th:classappend="${userList.getPrePage()} == 0 ? 'd-none'">
+							<a class="page-link text-white" th:href="@{/admin/account(query=${query},pageNum=1)}">&laquo;</a>
 						</li>
-						<li class="page-item" th:classappend="${userList.getPrePage()} == 0 ? 'disabled'">
-							<a class="page-link text-black" th:href="@{/admin/account(query=${query},pageNum=${userList.getPrePage()})}">&lt;</a>
+						<li class="page-item" th:classappend="${userList.getPrePage()} == 0 ? 'd-none'">
+							<a class="page-link text-white" th:href="@{/admin/account(query=${query},pageNum=${userList.getPrePage()})}">&lt;</a>
 						</li>
 						<li class="page-item" th:each="page : ${#numbers.sequence(userList.getNavigateFirstPage(),userList.getNavigateLastPage())}" th:classappend="${page == userList.getPageNum()} ? 'active'">
-							<a class="page-link text-black" th:text="${page}" th:href="@{/admin/account/(query=${query},pageNum=${page})}"></a>
+							<a class="page-link text-white" th:text="${page}" th:href="@{/admin/account/(query=${query},pageNum=${page})}"></a>
 						</li>
-						<li class="page-item" th:classappend="${userList.getNextPage()} == 0 ? 'disabled'">
-							<a class="page-link text-black" th:href="@{/admin/account(query=${query},pageNum=${userList.getNextPage()})}">&gt;</a>
+						<li class="page-item" th:classappend="${userList.getNextPage()} == 0 ? 'd-none'">
+							<a class="page-link text-white" th:href="@{/admin/account(query=${query},pageNum=${userList.getNextPage()})}">&gt;</a>
 						</li>
-							<li class="page-item" th:classappend="${userList.getNextPage()} == 0 ? 'disabled'">
-							<a class="page-link text-black" th:href="@{/admin/account(query=${query},pageNum=${userList.getPages()})}">&raquo;</a>
+							<li class="page-item" th:classappend="${userList.getNextPage()} == 0 ? 'd-none'">
+							<a class="page-link text-white" th:href="@{/admin/account(query=${query},pageNum=${userList.getPages()})}">&raquo;</a>
 						</li>
 					</ul>
 					<section class="navbar">
