--- a/src/main/resources/templates/account/admin/reviewManagement.html
+++ b/src/main/resources/templates/account/admin/reviewManagement.html
@@ -10,6 +10,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
  rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="Stylesheet" href="/css/movieRec.css">
 <script>
 	
 
@@ -121,21 +122,21 @@
                    			<h1 class="mt-5">검색결과가 없습니다 재검색 해주세요.</h1>
 						</div>
 						<!-- 페이지네이션 -->
-			 			<ul th:if="${reviewList.getList().size()>0}" class="pagination d-flex justify-content-center mt-5">
-			 				<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'disabled'">
-								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=1)}">&laquo;</a>
+			 			<ul th:if="${reviewList.getList().size()>0}" class="custom-pagination pagination d-flex justify-content-center mt-5">
+			 				<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'd-none'">
+								<a class="page-link text-white" th:href="@{/admin/review(query=${query},pageNum=1)}">&laquo;</a>
 							</li>
-							<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'disabled'">
-								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPrePage()})}">&lt;</a>
+							<li class="page-item" th:classappend="${reviewList.getPrePage()} == 0 ? 'd-none'">
+								<a class="page-link text-white" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPrePage()})}">&lt;</a>
 							</li>
 							<li class="page-item" th:each="page : ${#numbers.sequence(reviewList.getNavigateFirstPage(),reviewList.getNavigateLastPage())}" th:classappend="${page == reviewList.getPageNum()} ? 'active'">
-								<a class="page-link text-black" th:text="${page}" th:href="@{/admin/review/(query=${query},pageNum=${page})}"></a>
+								<a class="page-link text-white" th:text="${page}" th:href="@{/admin/review/(query=${query},pageNum=${page})}"></a>
 							</li>
-							<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'disabled'">
-								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getNextPage()})}">&gt;</a>
+							<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'd-none'">
+								<a class="page-link text-white" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getNextPage()})}">&gt;</a>
 							</li>
-								<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'disabled'">
-								<a class="page-link text-black" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPages()})}">&raquo;</a>
+								<li class="page-item" th:classappend="${reviewList.getNextPage()} == 0 ? 'd-none'">
+								<a class="page-link text-white" th:href="@{/admin/review(query=${query},pageNum=${reviewList.getPages()})}">&raquo;</a>
 							</li>
 						</ul>
 						
