--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -49,3 +49,5 @@ a:link{color:rgb(255, 255, 255)}
 .custom-pagination.pagination > .active a:hover {
 	color:  rgb(31,32,35);
 }
+
+/* mypage nav a태그 */
