logo,seachbar update

--- a/bin/main/templates/account/loginPage.html
+++ b/bin/main/templates/account/loginPage.html
@@ -188,11 +188,12 @@
 </head>
 <body>
 	
-			<nav class="container-fluid row">
-				<h1 class="text-danger col-6" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</h1>
-				
-				<div class="col-6">		
-						<button id="btn-signup" class="btn btn-light float-end" onclick="location.href='/signup'">회원가입</button>
+			<nav class="d-flex justify-content-between"style="padding-top:16px;padding-left:78px;">
+				<div>
+					<h1 class="h1 text-danger" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</h1>
+				</div>
+				<div>
+					<button id="btn-signup" class="btn btn-danger float-end mt-2" onclick="location.href='/signup'">회원가입</button>
 				</div>
 			</nav>
 			<div id="login-background" >
