--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -30,10 +30,8 @@
 	crossorigin="anonymous"></script>
 
 <style>
-/* dropdown-menu:hover{
-} */
-dropdown-item:hover{
-color:black !important;
+li:hover {
+	color: black;
 }
 </style>
 </head>
@@ -49,11 +47,28 @@ color:black !important;
 				<!-- 왼쪽정렬 메뉴 -->
 
 				<div class="col-lg-8 mt-2 text-white">
+					<div th:if="${session.userId == null}" class="float-end mx-1">
+						<a href="/login" class="headerLink">
+							<button class="btn btn-outline-light">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+									fill="currentColor" class="bi bi-door-open-fill"
+									viewBox="0 0 16 16">
+								<path
+										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
+								</svg>
+								로그인
+							</button>
+						</a>
+					</div>
+
+
 					<div class="float-end mx-1 headerLink"
 						th:if="${session.userId != null}">
 						<div class="dropdown ">
 							<!-- <button > -->
-								<img src="/images/p.png" style="width: 70px; position: relative; bottom:10px;" class="btn dropdown-toggle" type="button"
+							<img src="/images/p.png"
+								style="width: 70px; position: relative; bottom: 10px;"
+								class="btn dropdown-toggle" type="button"
 								id="dropdownMenuButton1" data-bs-toggle="dropdown"
 								aria-expanded="false">
 							<!-- </button> -->
@@ -69,10 +84,13 @@ color:black !important;
 					<div class="float-end mx-1">
 						<a href="/kobis/total">
 							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
-									<path d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z"/>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+									fill="currentColor" class="bi bi-trophy-fill"
+									viewBox="0 0 16 16">
+									<path
+										d="M2.5.5A.5.5 0 0 1 3 0h10a.5.5 0 0 1 .5.5c0 .538-.012 1.05-.034 1.536a3 3 0 1 1-1.133 5.89c-.79 1.865-1.878 2.777-2.833 3.011v2.173l1.425.356c.194.048.377.135.537.255L13.3 15.1a.5.5 0 0 1-.3.9H3a.5.5 0 0 1-.3-.9l1.838-1.379c.16-.12.343-.207.537-.255L6.5 13.11v-2.173c-.955-.234-2.043-1.146-2.833-3.012a3 3 0 1 1-1.132-5.89A33.076 33.076 0 0 1 2.5.5zm.099 2.54a2 2 0 0 0 .72 3.935c-.333-1.05-.588-2.346-.72-3.935zm10.083 3.935a2 2 0 0 0 .72-3.935c-.133 1.59-.388 2.885-.72 3.935z" />
 								</svg>
-							통계
+								통계
 							</button>
 						</a>
 					</div>
@@ -119,21 +137,9 @@ color:black !important;
 							</button>
 						</a>
 					</div>
-					<div th:if="${session.userId == null}" class="float-end mx-1">
-						<a href="/login" class="headerLink">
-							<button class="btn btn-outline-light">
-								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-									fill="currentColor" class="bi bi-door-open-fill"
-									viewBox="0 0 16 16">
-								<path
-										d="M1.5 15a.5.5 0 0 0 0 1h13a.5.5 0 0 0 0-1H13V2.5A1.5 1.5 0 0 0 11.5 1H11V.5a.5.5 0 0 0-.57-.495l-7 1A.5.5 0 0 0 3 1.5V15H1.5zM11 2h.5a.5.5 0 0 1 .5.5V15h-1V2zm-2.5 8c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z" />
-								</svg>
-								로그인
-							</button>
-						</a>
-					</div>
+
 				</div>
-				
+
 				<div>
 					<!-- 로그아웃 ajax -->
 					<input type="hidden" id="userId" th:value="${session.userId}">
