--- a/bin/main/templates/MyPage/MyPageTrash.html
+++ b/bin/main/templates/MyPage/MyPageTrash.html
@@ -71,7 +71,7 @@
 					</div>
 					<div>
 						<form method="POST" id="frm" style="color: white;">
-							<div class="row">
+							<div class="row m-5">
 								<div class="mt-3 mb-4" th:each="list : ${trash.getList()}"
 									style="background-color: rgb(38, 38, 38); border-radius: 9px;">
 
