--- a/src/main/resources/static/css/m_rank.css
+++ b/src/main/resources/static/css/m_rank.css
@@ -29,7 +29,7 @@
 } */
 
 body {
-	background: url(/images/popcorn.jpg);
+	background: url(/images/black.jpg);
 	background-color: #11ffee00;
 	font-weight: bold;
 	color: black !important;
