--- a/bin/main/templates/account/loginPage.html
+++ b/bin/main/templates/account/loginPage.html
@@ -190,10 +190,10 @@
 	
 			<nav class="d-flex justify-content-between"style="padding-top:16px;padding-left:78px;">
 				<div>
-					<h1 class="h1 text-danger" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</h1>
+					<a href="/" class="h1 text-danger text-decoration-none" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</a>
 				</div>
 				<div>
-					<button id="btn-signup" class="btn btn-danger float-end mt-2" onclick="location.href='/signup'">회원가입</button>
+					<button id="btn-signup" class="btn btn-light float-end mt-2" onclick="location.href='/signup'">회원가입</button>
 				</div>
 			</nav>
 			<div id="login-background" >
