--- a/src/main/resources/templates/account/signUpPage.html
+++ b/src/main/resources/templates/account/signUpPage.html
@@ -239,7 +239,7 @@ function CheckEmail(str){
 	
 		<nav class="d-flex justify-content-between"style="padding-top:16px;padding-left:78px;">
 				<div>
-					<h1 class="h1" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);">WaTCaT</h1>
+					<a href="/" class="h1 text-danger text-decoration-none" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</a>
 				</div>
 				<div>
 					<button id="btn-signup" class="btn btn-light float-end mt-2" onclick="location.href='/login'">로그인</button>
