--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,6 +3,15 @@ html, body{
     height: 100%;
 }
 
+@media(max-width:1020px){
+		.navbar-toggler{
+			 display:inline-block !important;
+		}
+		.navbar-top-menu div{
+			display:none !important;
+		}
+	}
+
 /* a 태그 세팅 */
 a{text-decoration: none}
 a:visited{color:rgb(255, 255, 255)}
