--- a/bin/main/templates/movie/recommend.html
+++ b/bin/main/templates/movie/recommend.html
@@ -38,14 +38,14 @@
             </button>
     </div>
     <div class="container">
-		<div class="table-responsive">
+		<div class="table">
 			<table class="table text-white">
 				<colgroup>
-					<col width="5%" />
-					<col width="45%" />
-					<col width="15%" />
-					<col width="15%" />
-					<col width="10%" />
+					<col width="7%" />
+					<col width="43%" />
+					<col width="16%" />
+					<col width="11%" />
+					<col width="13%" />
 					<col width="10%" />
 				</colgroup>
 				<thead class="text-center">
