--- a/src/main/resources/templates/kobisTotal.html
+++ b/src/main/resources/templates/kobisTotal.html
@@ -12,9 +12,9 @@
 </head>
 <body class="bg-black">
 	<header th:include="header"  class="fixed-top px-0 mx-0"></header>
-	<div class="row">
-		<div style="padding-top: 150px;" class="col-lg-10 mx-auto">
-			<div class="border border-1 border-white rounded text-white float-start m-2 p-2" style="width: 600px;">
+	<div class="container">
+		<div style="padding-top: 150px;" class="row">
+			<div class="col-lg-6 mx-auto border border-1 border-white rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>랭킹1위 최다수 영화</H3>
 				</div>
@@ -48,7 +48,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="border border-1 border-danger rounded text-white float-start m-2 p-2" style="width: 600px;">
+			<div class="col-lg-6 mx-auto border border-1 border-danger rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>박스오피스10 진입 최다수 영화</H3>
 				</div>
@@ -82,7 +82,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="border border-1 border-success rounded text-white float-start m-2 p-2" style="width: 600px;">
+			<div class="col-lg-6 mx-auto border border-1 border-success rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>일매출 랭킹</H3>
 				</div>
@@ -116,7 +116,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="border border-1 border-primary rounded text-white float-start m-2 p-2" style="width: 600px;">
+			<div class="col-lg-6 mx-auto border border-1 border-primary rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>누적매출 랭킹</H3>
 				</div>
@@ -150,7 +150,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="border border-1 border-secondary rounded text-white float-start m-2 p-2" style="width: 600px;">
+			<div class="col-lg-6 mx-auto border border-1 border-secondary rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>당일 관객수 랭킹</H3>
 				</div>
@@ -184,7 +184,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="border border-1 border-warning rounded text-white float-start m-2 p-2" style="width: 600px;">
+			<div class="col-lg-6 mx-auto border border-1 border-warning rounded text-white float-start m-2 p-2" style="width: 600px;">
 				<div class="text-center">
 					<H3>누적 관객수 랭킹</H3>
 				</div>
